--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "heroku-postbuild": "webpack -p --config ./webpack.config.js --progress",
-    "start": "node server/index.js",
+    "start": "node server/server-index.js",
     "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon --inspect server/index.js",
+    "server-dev": "nodemon --inspect server/server-index.js",
     "test": "test"
   },
   "repository": {
