--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server/server-index.js",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon --inspect server/server-index.js",
-    "test": "test"
+    "test": "node_modules/.bin/mocha"
   },
   "repository": {
     "type": "git",
@@ -34,6 +34,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "jquery": "^3.3.1",
+    "mocha": "^5.0.4",
     "mongoose": "^5.0.6",
     "mongoose-unique-validator": "^2.0.0",
     "nodemon": "^1.15.1",
