--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "brace": "^0.11.1",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.10",
