--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "",
   "dependencies": {
+    "ajv": "^6.2.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
@@ -48,6 +49,8 @@
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-toolbox": "^2.0.0-beta.12",
+    "semantic-ui-react": "^0.78.3",
     "validator": "^9.4.1",
     "vm2": "^3.5.2",
     "webpack": "^3.11.0"
