--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "css-loader": "^0.28.10",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "jasmine": "^3.1.0",
     "jquery": "^3.3.1",
     "mocha": "^5.0.4",
     "mongoose": "^5.0.6",
@@ -50,6 +51,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-toolbox": "^2.0.0-beta.12",
+    "sandbox": "^0.8.6",
     "semantic-ui-react": "^0.78.3",
     "validator": "^9.4.1",
     "vm2": "^3.5.2",
