--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "css-loader": "^0.28.10",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
     "jasmine": "^3.1.0",
     "jquery": "^3.3.1",
     "mocha": "^5.0.4",
