--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "8.10.0"
+  },
   "scripts": {
     "postinstall": "node database/seed/dbSeed.js",
     "heroku-postbuild": "webpack -p --config ./webpack.config.js --progress",
