--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "node": "8.10.0"
   },
   "scripts": {
-    "postinstall": "node database/seed/dbSeed.js",
-    "heroku-postbuild": "webpack -p --config ./webpack.config.js --progress",
+    "heroku-postbuild": "webpack -p --config ./webpack.config.js --progress | node database/seed/dbSeed.js",
     "start": "node server/server-index.js",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon --inspect server/server-index.js",
