--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
+    "http": "0.0.0",
     "jasmine": "^3.1.0",
     "jquery": "^3.3.1",
     "mocha": "^5.0.4",
@@ -54,6 +55,8 @@
     "react-router-dom": "^4.2.2",
     "sandbox": "^0.8.6",
     "semantic-ui-react": "^0.78.3",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4",
     "validator": "^9.4.1",
     "vm2": "^3.5.2",
     "webpack": "^3.11.0"
