removed node_env

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "heroku-postbuild": "webpack -p --config ./webpack.config.js --progress | node database/seed/dbSeed.js",
-    "start": "SET NODE_ENV=dev && node server/server-index.js",
+    "start": "node server/server-index.js",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon --inspect server/server-index.js",
     "test": "SET TESTMONGO_URI='mongodb://localhost:27017/TESTlevelup' && node database/seed/dbSeed.js --timeout 1000 && mocha --timeout 10000"
