--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "8.10.0"
   },
   "scripts": {
-    "heroku-postbuild": "webpack -p --config ./webpack.config.js --progress | node database/seed/dbSeed.js",
+    "heroku-postbuild": "webpack -p --config ./webpack.config.js --progress && node database/seed/dbSeed.js",
     "start": "node server/server-index.js",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon --inspect server/server-index.js",
@@ -72,5 +72,11 @@
     "validator": "^9.4.1",
     "vm2": "^3.5.2",
     "webpack": "^3.11.0"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0"
   }
 }
